--- a/frontend/src/components/SiteTop.css
+++ b/frontend/src/components/SiteTop.css
@@ -22,11 +22,11 @@
     font: 70px "Brush Script MT";
     user-select: none;
     /*margin-left: 25px;*/
-    top: -20px;
+    top: -10px;
     left: 0;
     padding-bottom: 300px;
     position: absolute;
-    width: 300px;
+    width: 200px;
     height: auto;
     z-index: -1;
     /*height: 1110px;*/
@@ -194,17 +194,19 @@
     top: 65%;
     left: 45%;
     width: 300px;
-    animation: username_appear 4s forwards;
+    animation: username_appear 3s ease-in forwards ;
     user-select: none;
-    z-index: -1;
+    z-index: -100;
     /*font-family: Bookman, URW Bookman L, serif	;*/
 }
 @keyframes username_appear {
     0% {
         opacity: 0;
-
     }
-    50% {
+    20% {
+        opacity: 1;
+    }
+    80% {
         opacity: 1;
     }
     100% {
