--- a/frontend/src/components/Todo.css
+++ b/frontend/src/components/Todo.css
@@ -684,15 +684,15 @@ margin-left: 20px;
   flex-direction: row;
   justify-content: space-around;
   /*margin-top: 300px;*/
-  width: 120%;
+  width: 114%;
   height: 20%;
   min-height: 150px;
   /*padding-bottom: 10px;*/
-  padding-top: 10px;
+  padding-top: 20px;
   margin-bottom: 20px;
   /*margin-left: 25%;*/
   z-index: 100000;
-  /*background-color: red;*/
+  background-color: white;
   /*float: bottom;*/
 }
 
